# kubefn

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile.demo  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
benchmarks/: README.md  compare-spring-boot.sh  failure-injection.sh  hot-swap-test.sh  sustained-load.sh
comparison/spring-boot-checkout/: build.gradle.kts  settings.gradle.kts
demos/: hot-swap-demo.sh
deploy/: deploy.sh  network-policy.yaml
deploy/crds/: kubefnfunction-crd.yaml  kubefngroup-crd.yaml
deploy/manifests/: example-function.yaml  namespace.yaml  runtime-deployment.yaml
docs/: comparison.md  developer-experience-roadmap.md  whitepaper.md
docs-site/: mkdocs.yml
docs-site/docs/: index.md
examples/ai-inference-pipeline/: build.gradle.kts
examples/api-gateway/: build.gradle.kts
gradle/: libs.versions.toml
kubefn-api/: build.gradle.kts
kubefn-cli/: kubefn
kubefn-contracts/: build.gradle.kts
kubefn-operator/: build.gradle.kts
kubefn-runtime/: Dockerfile  build.gradle.kts
kubefn-runtime-node/: Dockerfile.prod  package.json
kubefn-runtime-python/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
kubefn-runtime-python/examples/ml_pipeline/: feature_engineering.py  inference.py  pipeline.py
kubefn-runtime-python/kubefn/: __init__.py  __main__.py  context.py  decorators.py  heap_exchange.py  invocation_capture.py  loader.py  replay_engine.py  server.py
kubefn-sdk/: build.gradle.kts
kubefn-shared/: build.gradle.kts
kubefn-testing/: build.gradle.kts
website/: index.html
(+255 files in other folders)
